src/sassie/simulate/torsion_angle_monte_carlo/extensions/cpp_overlap/readme_will_not_compile_march_2023_temp.txt
overlap_extension.cpp:171:28: error: cannot convert ‘double*’ to ‘PyObject*’ {aka ‘_object*’}
  171 |     flag_overlap = overlap(coor, r, natoms, scale, bond_table);
      |                            ^~~~
      |                            |
      |                            double*


